dsa-problems/AdvancedGraphs/deep_validation_report.txt
  File "/Users/nikhilgundala/Desktop/NTB/DSA/dsa-problems/AdvancedGraphs/deep_validate.py", line 150
    forv in violations:
                      ^
SyntaxError: invalid syntax
